--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,13 @@ dev_dependencies:
   riverpod_generator: ^2.3.11
   isar_generator: ^3.1.0+1
   json_serializable: ^6.7.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "appicon.png"
+  min_sdk_android: 21
 
 flutter:
   uses-material-design: true
