--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ibidem
-description: "A new Flutter project."
+description: "Same book, Same place, Always"
 publish_to: 'none'
 version: 1.0.0
 
@@ -12,7 +12,7 @@ dependencies:
   
   # [State Management]
   flutter_riverpod: ^2.4.9
-  riverpod_annotation: ^2.3.3
+  riverpod_annotation: ^2.3.5
 
   # [Isar] DB
   isar: ^3.1.0+1
@@ -41,6 +41,8 @@ dependencies:
   share_plus: ^10.0.3
   screenshot: ^3.0.0
   intl: ^0.20.2
+  http: ^1.1.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +51,7 @@ dev_dependencies:
   
   build_runner: ^2.4.8 
   freezed: ^2.4.7
-  riverpod_generator: ^2.3.11
+  riverpod_generator: ^2.4.0
   isar_generator: ^3.1.0+1
   json_serializable: ^6.7.1
   flutter_launcher_icons: ^0.13.1
