--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   intl: ^0.20.2
   http: ^1.1.0
   path: ^1.8.3
+  uuid: ^4.5.2
+  flutter_displaymode: ^0.6.0
 
 dev_dependencies:
   flutter_test:
